--- a/playsense_privacy_policy.html
+++ b/playsense_privacy_policy.html
@@ -9,7 +9,7 @@
     <body>
     <h2>Privacy Policy</h2>
 	<h4>Last updated on: March 3, 2019</h4>
-	<p> KCS Inc. built the PlaySense app as a Free app. This SERVICE is provided by KCS Inc. at no cost and is intended for use as is. </p> 
+	<p> PlaySense is a free application available in the Google Playstore. This SERVICE is provided by Stone Capsule at no cost and is intended for use as is. </p> 
 	<p>PlaySense, a speech learning game application designed for children.</p>
 	<p><strong>Terms and Conditions:</strong></p>
 	<p>This game application is published only for educational purposes for children to provide speech enhancement activities, and to also help adults and SLPs to make use of this as a speech language tool for their children.</p>
